// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<div
  className="message"
>
  <div
    className="header"
  >
    <h2>
      Testing
    </h2>
  </div>
  <div
    className="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with icon 1`] = `
<div
  class="message"
>
  <div
    class="header"
  >
    Sample icon SVG
    <h2>
      Testing
    </h2>
  </div>
  <div
    class="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;

exports[`Message rendering with type 1`] = `
<div
  class="message error"
>
  <div
    class="header"
  >
    <svg />
    <h2>
      Testing
    </h2>
  </div>
  <div
    class="content"
  >
    <p>
      Message content
    </p>
  </div>
</div>
`;
